2025 Week 28, minor bug fixes and code cleaning

--- a/Week_28_Corruption_Perception_Index/EDA.ipynb
+++ b/Week_28_Corruption_Perception_Index/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "id": "d788182f",
    "metadata": {},
    "outputs": [
@@ -12,21 +12,19 @@
        "polars.config.Config"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import polars as pl\n",
-    "pl.Config().set_tbl_rows(30)\n",
-    "\n",
-    "\n"
+    "pl.Config().set_tbl_rows(30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "id": "28ba852c",
    "metadata": {},
    "outputs": [
@@ -90,7 +88,7 @@
        "└───────────────────┴──────┴────────┴──────────┴───────────┴──────────────┴─────────┴──────────────┘"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "id": "b570e4ff",
    "metadata": {},
    "outputs": [
@@ -163,7 +161,7 @@
        "└─────────┴──────┴──────┴────────┴───┴──────┴─────────┴─────────────┴──────────────┘"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "id": "ab70b7ba",
    "metadata": {},
    "outputs": [
@@ -205,7 +203,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (6, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>REGION</th><th>count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;AME&quot;</td><td>410</td></tr><tr><td>&quot;WE/EU&quot;</td><td>403</td></tr><tr><td>&quot;AP&quot;</td><td>388</td></tr><tr><td>&quot;ECA&quot;</td><td>247</td></tr><tr><td>&quot;MENA&quot;</td><td>234</td></tr><tr><td>&quot;SSA&quot;</td><td>630</td></tr></tbody></table></div>"
+       "<small>shape: (6, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>REGION</th><th>count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;MENA&quot;</td><td>234</td></tr><tr><td>&quot;SSA&quot;</td><td>630</td></tr><tr><td>&quot;AP&quot;</td><td>388</td></tr><tr><td>&quot;AME&quot;</td><td>410</td></tr><tr><td>&quot;ECA&quot;</td><td>247</td></tr><tr><td>&quot;WE/EU&quot;</td><td>403</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (6, 2)\n",
@@ -214,16 +212,16 @@
        "│ ---    ┆ ---   │\n",
        "│ str    ┆ u32   │\n",
        "╞════════╪═══════╡\n",
-       "│ AME    ┆ 410   │\n",
-       "│ WE/EU  ┆ 403   │\n",
-       "│ AP     ┆ 388   │\n",
-       "│ ECA    ┆ 247   │\n",
        "│ MENA   ┆ 234   │\n",
        "│ SSA    ┆ 630   │\n",
+       "│ AP     ┆ 388   │\n",
+       "│ AME    ┆ 410   │\n",
+       "│ ECA    ┆ 247   │\n",
+       "│ WE/EU  ┆ 403   │\n",
        "└────────┴───────┘"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,29 +232,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "id": "d1fcf1c5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_pl' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[81], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_pl\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_pl' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'Korea, North', 'Korea, South', 'United States'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_pl"
+    "(\n",
+    "    set(df_cpi['COUNTRY']) - \n",
+    "    set(df_historical['COUNTRY'])\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "id": "27d93f6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Brunei Darussalam',\n",
+       " 'North Korea',\n",
+       " 'Puerto Rico',\n",
+       " 'South Korea',\n",
+       " 'United States of America'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(\n",
+    "    set(df_historical['COUNTRY']) - \n",
+    "    set(df_cpi['COUNTRY'])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "5c49ebfa",
    "metadata": {},
    "outputs": [
@@ -266,7 +294,7 @@
        "[400, 500, 600, 700, 800, 900]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "78c58976",
    "metadata": {},
    "outputs": [
@@ -287,7 +315,7 @@
        "[1000, 2000, 3000, 4000, 5000, 6000, 7000, 8000, 9000, 10000]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d858a8f8",
    "metadata": {},
    "outputs": [
@@ -323,7 +351,7 @@
        " 10000]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
