--- a/Week_30_Europe_Emmissions/EDA.ipynb
+++ b/Week_30_Europe_Emmissions/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "d788182f",
    "metadata": {},
    "outputs": [],
@@ -16,19 +16,11 @@
    "execution_count": null,
    "id": "28ba852c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading data from df.parquet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "parquet_data_source = 'df.parquet'\n",
+    "parquet_data_source = 'df.parque'\n",
     "csv_data_source = 'europe_monthly_electricity.csv' \n",
-    "\n",
+    "date_fmt ='%m/%d/%Y'\n",
     "if os.path.exists(parquet_data_source): # use pre-cleaned parquet file\n",
     "    print(f'Reading data from {parquet_data_source}')\n",
     "    df = pl.read_parquet(parquet_data_source)\n",
@@ -38,19 +30,28 @@
     "    df = (\n",
     "        pl.read_csv(\n",
     "            csv_data_source,\n",
-    "            try_parse_dates=True\n",
     "            )\n",
     "        .select(\n",
     "            COUNTRY = pl.col('Area'),\n",
     "            ISO_3_CODE = pl.col('ISO 3 code'),\n",
-    "            YEAR = pl.col('Date').dt.year(),\n",
+    "            YEAR = pl.col('Date')\n",
+    "                .str.to_date(format=date_fmt)\n",
+    "                .dt.year(),\n",
+    "            MONTH = pl.col('Date')\n",
+    "                .str.to_date(format=date_fmt)\n",
+    "                .dt.strftime(\"%b\"),\n",
+    "            MONTH_NUM = pl.col('Date')\n",
+    "                .str.to_date(format=date_fmt)\n",
+    "                .dt.month(),\n",
+    "            DATE = pl.col('Date')\n",
+    "                .str.to_date(format=date_fmt),\n",
     "            EU = pl.col('EU').cast(pl.Boolean),\n",
     "            OECD = pl.col('OECD').cast(pl.Boolean),\n",
     "            G20 = pl.col('G20').cast(pl.Boolean),\n",
     "            G7 = pl.col('G7').cast(pl.Boolean),\n",
     "            CAT = pl.col('Category').cast(pl.Categorical),\n",
     "            SUBCAT = pl.col('Subcategory').cast(pl.Categorical),\n",
-    "            VARIABLE = pl.col('Variable').cast(pl.Categorical),\n",
+    "            EMISSION = pl.col('Variable').cast(pl.Categorical),\n",
     "            UNIT = pl.col('Unit').cast(pl.Categorical),\n",
     "            VALUE = pl.col('Value'),\n",
     "        )\n",
@@ -61,183 +62,16 @@
     "df\n",
     "df.write_excel('df.xlsx')\n",
     "df.write_parquet('df.parquet')\n",
+    "print(df.columns)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "77c7db1b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shape: (38, 2)\n",
-      "┌─────────────────┬───────┐\n",
-      "│ COUNTRY         ┆ count │\n",
-      "│ ---             ┆ ---   │\n",
-      "│ str             ┆ u32   │\n",
-      "╞═════════════════╪═══════╡\n",
-      "│ Malta           ┆ 4180  │\n",
-      "│ Spain           ┆ 7308  │\n",
-      "│ Estonia         ┆ 5418  │\n",
-      "│ Romania         ┆ 6174  │\n",
-      "│ Netherlands     ┆ 6930  │\n",
-      "│ …               ┆ …     │\n",
-      "│ Greece          ┆ 5418  │\n",
-      "│ North Macedonia ┆ 5390  │\n",
-      "│ Luxembourg      ┆ 3600  │\n",
-      "│ Cyprus          ┆ 5500  │\n",
-      "│ Kosovo          ┆ 1394  │\n",
-      "└─────────────────┴───────┘\n",
-      "shape: (38, 2)\n",
-      "┌────────────┬───────┐\n",
-      "│ ISO_3_CODE ┆ count │\n",
-      "│ ---        ┆ ---   │\n",
-      "│ str        ┆ u32   │\n",
-      "╞════════════╪═══════╡\n",
-      "│ NOR        ┆ 4641  │\n",
-      "│ IRL        ┆ 5704  │\n",
-      "│ BEL        ┆ 7308  │\n",
-      "│ FIN        ┆ 5304  │\n",
-      "│ XKX        ┆ 1394  │\n",
-      "│ …          ┆ …     │\n",
-      "│ CYP        ┆ 5500  │\n",
-      "│ MDA        ┆ 2576  │\n",
-      "│ GRC        ┆ 5418  │\n",
-      "│ SVN        ┆ 5586  │\n",
-      "│ BIH        ┆ 2979  │\n",
-      "└────────────┴───────┘\n",
-      "shape: (11, 2)\n",
-      "┌──────┬───────┐\n",
-      "│ YEAR ┆ count │\n",
-      "│ ---  ┆ ---   │\n",
-      "│ i32  ┆ u32   │\n",
-      "╞══════╪═══════╡\n",
-      "│ 2015 ┆ 13284 │\n",
-      "│ 2020 ┆ 21162 │\n",
-      "│ 2025 ┆ 9769  │\n",
-      "│ 2021 ┆ 21234 │\n",
-      "│ 2019 ┆ 20556 │\n",
-      "│ …    ┆ …     │\n",
-      "│ 2024 ┆ 21293 │\n",
-      "│ 2022 ┆ 21711 │\n",
-      "│ 2023 ┆ 21420 │\n",
-      "│ 2016 ┆ 14469 │\n",
-      "│ 2018 ┆ 18913 │\n",
-      "└──────┴───────┘\n",
-      "shape: (2, 2)\n",
-      "┌───────┬────────┐\n",
-      "│ EU    ┆ count  │\n",
-      "│ ---   ┆ ---    │\n",
-      "│ bool  ┆ u32    │\n",
-      "╞═══════╪════════╡\n",
-      "│ false ┆ 44906  │\n",
-      "│ true  ┆ 156530 │\n",
-      "└───────┴────────┘\n",
-      "shape: (2, 2)\n",
-      "┌───────┬────────┐\n",
-      "│ OECD  ┆ count  │\n",
-      "│ ---   ┆ ---    │\n",
-      "│ bool  ┆ u32    │\n",
-      "╞═══════╪════════╡\n",
-      "│ true  ┆ 150340 │\n",
-      "│ false ┆ 51096  │\n",
-      "└───────┴────────┘\n",
-      "shape: (2, 2)\n",
-      "┌───────┬────────┐\n",
-      "│ G20   ┆ count  │\n",
-      "│ ---   ┆ ---    │\n",
-      "│ bool  ┆ u32    │\n",
-      "╞═══════╪════════╡\n",
-      "│ false ┆ 171156 │\n",
-      "│ true  ┆ 30280  │\n",
-      "└───────┴────────┘\n",
-      "shape: (2, 2)\n",
-      "┌───────┬────────┐\n",
-      "│ G7    ┆ count  │\n",
-      "│ ---   ┆ ---    │\n",
-      "│ bool  ┆ u32    │\n",
-      "╞═══════╪════════╡\n",
-      "│ false ┆ 176106 │\n",
-      "│ true  ┆ 25330  │\n",
-      "└───────┴────────┘\n",
-      "shape: (4, 2)\n",
-      "┌────────────────────────┬────────┐\n",
-      "│ CAT                    ┆ count  │\n",
-      "│ ---                    ┆ ---    │\n",
-      "│ cat                    ┆ u32    │\n",
-      "╞════════════════════════╪════════╡\n",
-      "│ Power sector emissions ┆ 65736  │\n",
-      "│ Electricity generation ┆ 127244 │\n",
-      "│ Electricity imports    ┆ 4228   │\n",
-      "│ Electricity demand     ┆ 4228   │\n",
-      "└────────────────────────┴────────┘\n",
-      "shape: (6, 2)\n",
-      "┌─────────────────────┬───────┐\n",
-      "│ SUBCAT              ┆ count │\n",
-      "│ ---                 ┆ ---   │\n",
-      "│ cat                 ┆ u32   │\n",
-      "╞═════════════════════╪═══════╡\n",
-      "│ CO2 intensity       ┆ 4228  │\n",
-      "│ Total               ┆ 4228  │\n",
-      "│ Demand              ┆ 4228  │\n",
-      "│ Electricity imports ┆ 4228  │\n",
-      "│ Aggregate fuel      ┆ 85899 │\n",
-      "│ Fuel                ┆ 98625 │\n",
-      "└─────────────────────┴───────┘\n",
-      "shape: (22, 2)\n",
-      "┌──────────────────┬───────┐\n",
-      "│ VARIABLE         ┆ count │\n",
-      "│ ---              ┆ ---   │\n",
-      "│ cat              ┆ u32   │\n",
-      "╞══════════════════╪═══════╡\n",
-      "│ Hydro            ┆ 12306 │\n",
-      "│ Clean            ┆ 12684 │\n",
-      "│ Lignite          ┆ 5727  │\n",
-      "│ Wind             ┆ 12579 │\n",
-      "│ Onshore wind     ┆ 12579 │\n",
-      "│ …                ┆ …     │\n",
-      "│ Total generation ┆ 4228  │\n",
-      "│ Hard coal        ┆ 7893  │\n",
-      "│ Renewables       ┆ 12684 │\n",
-      "│ Solar            ┆ 11172 │\n",
-      "│ Net imports      ┆ 4228  │\n",
-      "└──────────────────┴───────┘\n",
-      "shape: (4, 2)\n",
-      "┌───────────────┬───────┐\n",
-      "│ UNIT          ┆ count │\n",
-      "│ ---           ┆ ---   │\n",
-      "│ cat           ┆ u32   │\n",
-      "╞═══════════════╪═══════╡\n",
-      "│ gCO2e per kWh ┆ 4228  │\n",
-      "│ %             ┆ 61508 │\n",
-      "│ MtCO2e        ┆ 61508 │\n",
-      "│ TWh           ┆ 74192 │\n",
-      "└───────────────┴───────┘\n",
-      "shape: (11_371, 2)\n",
-      "┌────────┬───────┐\n",
-      "│ VALUE  ┆ count │\n",
-      "│ ---    ┆ ---   │\n",
-      "│ f64    ┆ u32   │\n",
-      "╞════════╪═══════╡\n",
-      "│ 306.55 ┆ 1     │\n",
-      "│ 17.72  ┆ 11    │\n",
-      "│ 509.89 ┆ 1     │\n",
-      "│ 9.97   ┆ 27    │\n",
-      "│ 1.11   ┆ 151   │\n",
-      "│ …      ┆ …     │\n",
-      "│ 620.69 ┆ 1     │\n",
-      "│ 28.43  ┆ 6     │\n",
-      "│ 18.64  ┆ 4     │\n",
-      "│ 32.42  ┆ 1     │\n",
-      "│ 449.47 ┆ 1     │\n",
-      "└────────┴───────┘\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for col in df.columns:\n",
     "    print(df[col].value_counts())"
@@ -253,29 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "0fd70529",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "COUNTRY = pl.col('COUNTRY'), # .cast(pl.String)',\n",
-      "ISO_3_CODE = pl.col('ISO_3_CODE'), # .cast(pl.String)',\n",
-      "YEAR = pl.col('YEAR'), # .cast(pl.String)',\n",
-      "EU = pl.col('EU'), # .cast(pl.String)',\n",
-      "OECD = pl.col('OECD'), # .cast(pl.String)',\n",
-      "G20 = pl.col('G20'), # .cast(pl.String)',\n",
-      "G7 = pl.col('G7'), # .cast(pl.String)',\n",
-      "CAT = pl.col('CAT'), # .cast(pl.String)',\n",
-      "SUBCAT = pl.col('SUBCAT'), # .cast(pl.String)',\n",
-      "VARIABLE = pl.col('VARIABLE'), # .cast(pl.String)',\n",
-      "UNIT = pl.col('UNIT'), # .cast(pl.String)',\n",
-      "VALUE = pl.col('VALUE'), # .cast(pl.String)',\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i, col in enumerate(df.columns):\n",
     "    select_string = (\n",
