--- a/Week_31_Candy/Plotly_FF_2025_31.EDA.ipynb
+++ b/Week_31_Candy/Plotly_FF_2025_31.EDA.ipynb
@@ -2,24 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d788182f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import polars as pl\n",
+    "import polars.selectors as cs\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "28ba852c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading data from candy-data.csv\n",
+      "Rows: 85\n",
+      "Columns: 13\n",
+      "$ COMPETITORNAME <str> '100 Grand', '3 Musketeers', 'One dime', 'One quarter', 'Air Heads', 'Almond Joy', 'Baby Ruth', 'Boston Baked Beans', 'Candy Corn', 'Caramel Apple Pops'\n",
+      "$ CHOCOLATE       <u8> 1, 1, 0, 0, 0, 1, 1, 0, 0, 0\n",
+      "$ FRUITY          <u8> 0, 0, 0, 0, 1, 0, 0, 0, 0, 1\n",
+      "$ CARAMEL         <u8> 1, 0, 0, 0, 0, 0, 1, 0, 0, 1\n",
+      "$ PEANUT_ALMOND   <u8> 0, 0, 0, 0, 0, 1, 1, 1, 0, 0\n",
+      "$ NOUGAT          <u8> 0, 1, 0, 0, 0, 0, 1, 0, 0, 0\n",
+      "$ CRISP_RICE_WAF  <u8> 1, 0, 0, 0, 0, 0, 0, 0, 0, 0\n",
+      "$ HARD            <u8> 0, 0, 0, 0, 0, 0, 0, 0, 0, 0\n",
+      "$ BAR             <u8> 1, 1, 0, 0, 0, 1, 1, 0, 0, 0\n",
+      "$ PLURIBUS        <u8> 0, 0, 0, 0, 0, 0, 0, 1, 1, 0\n",
+      "$ SUGAR_PCT      <f32> 0.7319999933242798, 0.6039999723434448, 0.010999999940395355, 0.010999999940395355, 0.906000018119812, 0.4650000035762787, 0.6039999723434448, 0.31299999356269836, 0.906000018119812, 0.6039999723434448\n",
+      "$ PRICE_PCT      <f32> 0.8600000143051147, 0.5109999775886536, 0.11599999666213989, 0.5109999775886536, 0.5109999775886536, 0.7670000195503235, 0.7670000195503235, 0.5109999775886536, 0.32499998807907104, 0.32499998807907104\n",
+      "$ WIN_PCT        <f32> 66.97172546386719, 67.60293579101562, 32.261085510253906, 46.11650466918945, 52.34146499633789, 50.3475456237793, 56.914546966552734, 23.417823791503906, 38.010963439941406, 34.51768112182617\n",
+      "\n",
+      "None\n",
+      "['COMPETITORNAME', 'CHOCOLATE', 'FRUITY', 'CARAMEL', 'PEANUT_ALMOND', 'NOUGAT', 'CRISP_RICE_WAF', 'HARD', 'BAR', 'PLURIBUS', 'SUGAR_PCT', 'PRICE_PCT', 'WIN_PCT']\n"
+     ]
+    }
+   ],
    "source": [
     "parquet_data_source = 'df.parque'\n",
-    "csv_data_source = 'europe_monthly_electricity.csv' \n",
+    "csv_data_source = 'candy-data.csv' \n",
     "date_fmt ='%m/%d/%Y'\n",
     "if os.path.exists(parquet_data_source): # use pre-cleaned parquet file\n",
     "    print(f'Reading data from {parquet_data_source}')\n",
@@ -31,50 +58,228 @@
     "        pl.read_csv(\n",
     "            csv_data_source,\n",
     "            )\n",
-    "        .select(\n",
-    "            COUNTRY = pl.col('Area'),\n",
-    "            ISO_3_CODE = pl.col('ISO 3 code'),\n",
-    "            YEAR = pl.col('Date')\n",
-    "                .str.to_date(format=date_fmt)\n",
-    "                .dt.year(),\n",
-    "            MONTH = pl.col('Date')\n",
-    "                .str.to_date(format=date_fmt)\n",
-    "                .dt.strftime(\"%b\"),\n",
-    "            MONTH_NUM = pl.col('Date')\n",
-    "                .str.to_date(format=date_fmt)\n",
-    "                .dt.month(),\n",
-    "            DATE = pl.col('Date')\n",
-    "                .str.to_date(format=date_fmt),\n",
-    "            EU = pl.col('EU').cast(pl.Boolean),\n",
-    "            OECD = pl.col('OECD').cast(pl.Boolean),\n",
-    "            G20 = pl.col('G20').cast(pl.Boolean),\n",
-    "            G7 = pl.col('G7').cast(pl.Boolean),\n",
-    "            CAT = pl.col('Category').cast(pl.Categorical),\n",
-    "            SUBCAT = pl.col('Subcategory').cast(pl.Categorical),\n",
-    "            EMISSION = pl.col('Variable').cast(pl.Categorical),\n",
-    "            UNIT = pl.col('Unit').cast(pl.Categorical),\n",
-    "            VALUE = pl.col('Value'),\n",
-    "        )\n",
-    "        .drop_nulls(subset='ISO_3_CODE') \n",
-    "        .filter(pl.col('YEAR') > 2014)   # data is parse prior to 2015\n",
+    "        .rename(lambda c: c.upper()) # col names to upper case\n",
+    "        .rename({\n",
+    "            'SUGARPERCENT'     : 'SUGAR_PCT',\n",
+    "            'PRICEPERCENT'     : 'PRICE_PCT',\n",
+    "            'WINPERCENT'       : 'WIN_PCT',\n",
+    "            'PEANUTYALMONDY'   : 'PEANUT_ALMOND',\n",
+    "            'CRISPEDRICEWAFER' : 'CRISP_RICE_WAF',\n",
+    "        })\n",
+    "        .with_columns(cs.integer().cast(pl.UInt8))\n",
+    "        .with_columns(cs.float().cast(pl.Float32))\n",
     "    )\n",
     "\n",
     "df\n",
-    "df.write_excel('df.xlsx')\n",
-    "df.write_parquet('df.parquet')\n",
+    "# df.write_excel('df.xlsx')\n",
+    "# df.write_parquet('df.parquet')\n",
+    "print(df.glimpse())\n",
     "print(df.columns)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "77c7db1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (85, 2)\n",
+      "┌─────────────────────────────┬───────┐\n",
+      "│ competitorname              ┆ count │\n",
+      "│ ---                         ┆ ---   │\n",
+      "│ str                         ┆ u32   │\n",
+      "╞═════════════════════════════╪═══════╡\n",
+      "│ Fruit Chews                 ┆ 1     │\n",
+      "│ Tootsie Roll Midgies        ┆ 1     │\n",
+      "│ Skittles wildberry          ┆ 1     │\n",
+      "│ M&M's                       ┆ 1     │\n",
+      "│ Mr Good Bar                 ┆ 1     │\n",
+      "│ …                           ┆ …     │\n",
+      "│ Mike & Ike                  ┆ 1     │\n",
+      "│ Lifesavers big ring gummies ┆ 1     │\n",
+      "│ Snickers                    ┆ 1     │\n",
+      "│ Almond Joy                  ┆ 1     │\n",
+      "│ Peanut M&Ms                 ┆ 1     │\n",
+      "└─────────────────────────────┴───────┘\n",
+      "shape: (2, 2)\n",
+      "┌───────────┬───────┐\n",
+      "│ chocolate ┆ count │\n",
+      "│ ---       ┆ ---   │\n",
+      "│ i64       ┆ u32   │\n",
+      "╞═══════════╪═══════╡\n",
+      "│ 1         ┆ 37    │\n",
+      "│ 0         ┆ 48    │\n",
+      "└───────────┴───────┘\n",
+      "shape: (2, 2)\n",
+      "┌────────┬───────┐\n",
+      "│ fruity ┆ count │\n",
+      "│ ---    ┆ ---   │\n",
+      "│ i64    ┆ u32   │\n",
+      "╞════════╪═══════╡\n",
+      "│ 0      ┆ 47    │\n",
+      "│ 1      ┆ 38    │\n",
+      "└────────┴───────┘\n",
+      "shape: (2, 2)\n",
+      "┌─────────┬───────┐\n",
+      "│ caramel ┆ count │\n",
+      "│ ---     ┆ ---   │\n",
+      "│ i64     ┆ u32   │\n",
+      "╞═════════╪═══════╡\n",
+      "│ 0       ┆ 71    │\n",
+      "│ 1       ┆ 14    │\n",
+      "└─────────┴───────┘\n",
+      "shape: (2, 2)\n",
+      "┌────────────────┬───────┐\n",
+      "│ peanutyalmondy ┆ count │\n",
+      "│ ---            ┆ ---   │\n",
+      "│ i64            ┆ u32   │\n",
+      "╞════════════════╪═══════╡\n",
+      "│ 0              ┆ 71    │\n",
+      "│ 1              ┆ 14    │\n",
+      "└────────────────┴───────┘\n",
+      "shape: (2, 2)\n",
+      "┌────────┬───────┐\n",
+      "│ nougat ┆ count │\n",
+      "│ ---    ┆ ---   │\n",
+      "│ i64    ┆ u32   │\n",
+      "╞════════╪═══════╡\n",
+      "│ 1      ┆ 7     │\n",
+      "│ 0      ┆ 78    │\n",
+      "└────────┴───────┘\n",
+      "shape: (2, 2)\n",
+      "┌──────────────────┬───────┐\n",
+      "│ crispedricewafer ┆ count │\n",
+      "│ ---              ┆ ---   │\n",
+      "│ i64              ┆ u32   │\n",
+      "╞══════════════════╪═══════╡\n",
+      "│ 1                ┆ 7     │\n",
+      "│ 0                ┆ 78    │\n",
+      "└──────────────────┴───────┘\n",
+      "shape: (2, 2)\n",
+      "┌──────┬───────┐\n",
+      "│ hard ┆ count │\n",
+      "│ ---  ┆ ---   │\n",
+      "│ i64  ┆ u32   │\n",
+      "╞══════╪═══════╡\n",
+      "│ 1    ┆ 15    │\n",
+      "│ 0    ┆ 70    │\n",
+      "└──────┴───────┘\n",
+      "shape: (2, 2)\n",
+      "┌─────┬───────┐\n",
+      "│ bar ┆ count │\n",
+      "│ --- ┆ ---   │\n",
+      "│ i64 ┆ u32   │\n",
+      "╞═════╪═══════╡\n",
+      "│ 0   ┆ 64    │\n",
+      "│ 1   ┆ 21    │\n",
+      "└─────┴───────┘\n",
+      "shape: (2, 2)\n",
+      "┌──────────┬───────┐\n",
+      "│ pluribus ┆ count │\n",
+      "│ ---      ┆ ---   │\n",
+      "│ i64      ┆ u32   │\n",
+      "╞══════════╪═══════╡\n",
+      "│ 0        ┆ 41    │\n",
+      "│ 1        ┆ 44    │\n",
+      "└──────────┴───────┘\n",
+      "shape: (34, 2)\n",
+      "┌──────────────┬───────┐\n",
+      "│ sugarpercent ┆ count │\n",
+      "│ ---          ┆ ---   │\n",
+      "│ f64          ┆ u32   │\n",
+      "╞══════════════╪═══════╡\n",
+      "│ 0.046        ┆ 2     │\n",
+      "│ 0.546        ┆ 2     │\n",
+      "│ 0.162        ┆ 1     │\n",
+      "│ 0.302        ┆ 1     │\n",
+      "│ 0.732        ┆ 8     │\n",
+      "│ …            ┆ …     │\n",
+      "│ 0.86         ┆ 1     │\n",
+      "│ 0.825        ┆ 2     │\n",
+      "│ 0.848        ┆ 1     │\n",
+      "│ 0.72         ┆ 1     │\n",
+      "│ 0.965        ┆ 2     │\n",
+      "└──────────────┴───────┘\n",
+      "shape: (29, 2)\n",
+      "┌──────────────┬───────┐\n",
+      "│ pricepercent ┆ count │\n",
+      "│ ---          ┆ ---   │\n",
+      "│ f64          ┆ u32   │\n",
+      "╞══════════════╪═══════╡\n",
+      "│ 0.651        ┆ 9     │\n",
+      "│ 0.22         ┆ 3     │\n",
+      "│ 0.906        ┆ 1     │\n",
+      "│ 0.255        ┆ 1     │\n",
+      "│ 0.86         ┆ 4     │\n",
+      "│ …            ┆ …     │\n",
+      "│ 0.965        ┆ 1     │\n",
+      "│ 0.069        ┆ 1     │\n",
+      "│ 0.441        ┆ 1     │\n",
+      "│ 0.976        ┆ 2     │\n",
+      "│ 0.465        ┆ 4     │\n",
+      "└──────────────┴───────┘\n",
+      "shape: (85, 2)\n",
+      "┌────────────┬───────┐\n",
+      "│ winpercent ┆ count │\n",
+      "│ ---        ┆ ---   │\n",
+      "│ f64        ┆ u32   │\n",
+      "╞════════════╪═══════╡\n",
+      "│ 49.524113  ┆ 1     │\n",
+      "│ 54.526451  ┆ 1     │\n",
+      "│ 35.290756  ┆ 1     │\n",
+      "│ 64.35334   ┆ 1     │\n",
+      "│ 69.483788  ┆ 1     │\n",
+      "│ …          ┆ …     │\n",
+      "│ 47.829754  ┆ 1     │\n",
+      "│ 57.21925   ┆ 1     │\n",
+      "│ 59.236122  ┆ 1     │\n",
+      "│ 59.529251  ┆ 1     │\n",
+      "│ 37.348522  ┆ 1     │\n",
+      "└────────────┴───────┘\n"
+     ]
+    }
+   ],
    "source": [
     "for col in df.columns:\n",
     "    print(df[col].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "83880df6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 10\n",
+      "Columns: 13\n",
+      "$ competitorname   <str> 'Sour Patch Tricksters', 'Caramel Apple Pops', 'Junior Mints', \"Reese's Peanut Butter cup\", 'Smarties candy', \"Reese's Miniatures\", \"Werther's Original Caramel\", 'Charleston Chew', 'Chewey Lemonhead Fruit Mix', 'Lifesavers big ring gummies'\n",
+      "$ chocolate        <i64> 0, 0, 1, 1, 0, 1, 0, 1, 0, 0\n",
+      "$ fruity           <i64> 1, 1, 0, 0, 1, 0, 0, 0, 1, 1\n",
+      "$ caramel          <i64> 0, 1, 0, 0, 0, 0, 1, 0, 0, 0\n",
+      "$ peanutyalmondy   <i64> 0, 0, 0, 1, 0, 1, 0, 0, 0, 0\n",
+      "$ nougat           <i64> 0, 0, 0, 0, 0, 0, 0, 1, 0, 0\n",
+      "$ crispedricewafer <i64> 0, 0, 0, 0, 0, 0, 0, 0, 0, 0\n",
+      "$ hard             <i64> 0, 0, 0, 0, 1, 0, 1, 0, 0, 0\n",
+      "$ bar              <i64> 0, 0, 0, 0, 0, 0, 0, 1, 0, 0\n",
+      "$ pluribus         <i64> 1, 0, 1, 0, 1, 0, 0, 0, 1, 0\n",
+      "$ sugarpercent     <f64> 0.068999998, 0.60399997, 0.197, 0.72000003, 0.26699999, 0.034000002, 0.186, 0.60399997, 0.73199999, 0.26699999\n",
+      "$ pricepercent     <f64> 0.116, 0.32499999, 0.51099998, 0.65100002, 0.116, 0.27900001, 0.26699999, 0.51099998, 0.51099998, 0.27900001\n",
+      "$ winpercent       <f64> 52.825947, 34.517681, 57.21925, 84.18029, 45.995827, 81.866257, 41.904308, 38.975037, 36.017628, 52.911392\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.sample(10).glimpse()"
    ]
   },
   {
