upate week 35 EDA file

--- a/Week_35_AI_Assistant_Cornell_Survey/EDA.ipynb
+++ b/Week_35_AI_Assistant_Cornell_Survey/EDA.ipynb
@@ -308,6 +308,37 @@
    "source": [
     "df.glimpse()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6a000be1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "import polars.selectors as cs\n",
+    "df=(\n",
+    "    pl.read_csv('dataset.csv')\n",
+    ")\n",
+    "df.write_parquet('dataset1.parquet')\n",
+    "\n",
+    "df=(\n",
+    "    pl.read_csv('dataset.csv')\n",
+    "    .with_columns(cs.float().cast(pl.Float32))\n",
+    "    .with_columns(cs.integer().cast(pl.UInt16))\n",
+    "    .with_columns(cs.string().cast(pl.Categorical))\n",
+    ")\n",
+    "df.write_parquet('dataset2.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6bf08bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
