week 38, worked on dmc.Chip to select 1 or more leagues

--- a/Week_38_Athlete_Ranks/EDA.ipynb
+++ b/Week_38_Athlete_Ranks/EDA.ipynb
@@ -11,7 +11,7 @@
     "import plotly.express as px\n",
     "#  Plot Rank by Year, and Rank by Career Year.\n",
     "#  Figure out a good way to filter. Ideas are:\n",
-    "#       fitler by league\n",
+    "#       filter by league\n",
     "#       Players with 5 or more years\n",
     "#       Players who acheived top xx for yy or more years\n",
     "\n",
