--- a/Week_41_NYC_Powerball_Numbers/EDA.ipynb
+++ b/Week_41_NYC_Powerball_Numbers/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4061ee11",
    "metadata": {},
    "outputs": [
@@ -16,24 +16,30 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 11)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>DATE</th><th>YEAR</th><th>MONTH</th><th>DAY</th><th>DAY_NAME</th><th>NUM_1</th><th>NUM_2</th><th>NUM_3</th><th>NUM_4</th><th>NUM_5</th><th>NUM_6</th></tr><tr><td>date</td><td>u16</td><td>str</td><td>u8</td><td>str</td><td>u8</td><td>u8</td><td>u8</td><td>u8</td><td>u8</td><td>u8</td></tr></thead><tbody><tr><td>2020-09-26</td><td>2020</td><td>&quot;Sep&quot;</td><td>26</td><td>&quot;Sat&quot;</td><td>11</td><td>21</td><td>27</td><td>36</td><td>62</td><td>24</td></tr><tr><td>2020-09-30</td><td>2020</td><td>&quot;Sep&quot;</td><td>30</td><td>&quot;Wed&quot;</td><td>14</td><td>18</td><td>36</td><td>49</td><td>67</td><td>18</td></tr><tr><td>2020-10-03</td><td>2020</td><td>&quot;Oct&quot;</td><td>3</td><td>&quot;Sat&quot;</td><td>18</td><td>31</td><td>36</td><td>43</td><td>47</td><td>20</td></tr><tr><td>2020-10-07</td><td>2020</td><td>&quot;Oct&quot;</td><td>7</td><td>&quot;Wed&quot;</td><td>6</td><td>24</td><td>30</td><td>53</td><td>56</td><td>19</td></tr><tr><td>2020-10-10</td><td>2020</td><td>&quot;Oct&quot;</td><td>10</td><td>&quot;Sat&quot;</td><td>5</td><td>18</td><td>23</td><td>40</td><td>50</td><td>18</td></tr></tbody></table></div>"
+       "<small>shape: (1_847, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>DATE</th><th>LOWEST</th><th>SECOND_LOWEST</th><th>MEDIAN</th><th>SECOND_HIGHEST</th><th>HIGHEST</th><th>POWERBALL</th></tr><tr><td>date</td><td>u8</td><td>u8</td><td>u8</td><td>u8</td><td>u8</td><td>u8</td></tr></thead><tbody><tr><td>2020-10-21</td><td>1</td><td>3</td><td>13</td><td>44</td><td>56</td><td>26</td></tr><tr><td>2021-01-06</td><td>1</td><td>20</td><td>22</td><td>60</td><td>66</td><td>3</td></tr><tr><td>2021-01-30</td><td>1</td><td>2</td><td>7</td><td>52</td><td>61</td><td>4</td></tr><tr><td>2021-02-06</td><td>1</td><td>16</td><td>48</td><td>49</td><td>65</td><td>8</td></tr><tr><td>2021-02-17</td><td>1</td><td>15</td><td>21</td><td>32</td><td>46</td><td>1</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2015-10-17</td><td>48</td><td>49</td><td>57</td><td>62</td><td>69</td><td>19</td></tr><tr><td>2020-01-01</td><td>49</td><td>53</td><td>57</td><td>59</td><td>62</td><td>26</td></tr><tr><td>2017-07-19</td><td>50</td><td>51</td><td>59</td><td>61</td><td>63</td><td>4</td></tr><tr><td>2020-11-21</td><td>51</td><td>54</td><td>57</td><td>60</td><td>69</td><td>11</td></tr><tr><td>2023-02-08</td><td>52</td><td>58</td><td>59</td><td>64</td><td>66</td><td>9</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (5, 11)\n",
-       "┌────────────┬──────┬───────┬─────┬───┬───────┬───────┬───────┬───────┐\n",
-       "│ DATE       ┆ YEAR ┆ MONTH ┆ DAY ┆ … ┆ NUM_3 ┆ NUM_4 ┆ NUM_5 ┆ NUM_6 │\n",
-       "│ ---        ┆ ---  ┆ ---   ┆ --- ┆   ┆ ---   ┆ ---   ┆ ---   ┆ ---   │\n",
-       "│ date       ┆ u16  ┆ str   ┆ u8  ┆   ┆ u8    ┆ u8    ┆ u8    ┆ u8    │\n",
-       "╞════════════╪══════╪═══════╪═════╪═══╪═══════╪═══════╪═══════╪═══════╡\n",
-       "│ 2020-09-26 ┆ 2020 ┆ Sep   ┆ 26  ┆ … ┆ 27    ┆ 36    ┆ 62    ┆ 24    │\n",
-       "│ 2020-09-30 ┆ 2020 ┆ Sep   ┆ 30  ┆ … ┆ 36    ┆ 49    ┆ 67    ┆ 18    │\n",
-       "│ 2020-10-03 ┆ 2020 ┆ Oct   ┆ 3   ┆ … ┆ 36    ┆ 43    ┆ 47    ┆ 20    │\n",
-       "│ 2020-10-07 ┆ 2020 ┆ Oct   ┆ 7   ┆ … ┆ 30    ┆ 53    ┆ 56    ┆ 19    │\n",
-       "│ 2020-10-10 ┆ 2020 ┆ Oct   ┆ 10  ┆ … ┆ 23    ┆ 40    ┆ 50    ┆ 18    │\n",
-       "└────────────┴──────┴───────┴─────┴───┴───────┴───────┴───────┴───────┘"
+       "shape: (1_847, 7)\n",
+       "┌────────────┬────────┬───────────────┬────────┬────────────────┬─────────┬───────────┐\n",
+       "│ DATE       ┆ LOWEST ┆ SECOND_LOWEST ┆ MEDIAN ┆ SECOND_HIGHEST ┆ HIGHEST ┆ POWERBALL │\n",
+       "│ ---        ┆ ---    ┆ ---           ┆ ---    ┆ ---            ┆ ---     ┆ ---       │\n",
+       "│ date       ┆ u8     ┆ u8            ┆ u8     ┆ u8             ┆ u8      ┆ u8        │\n",
+       "╞════════════╪════════╪═══════════════╪════════╪════════════════╪═════════╪═══════════╡\n",
+       "│ 2020-10-21 ┆ 1      ┆ 3             ┆ 13     ┆ 44             ┆ 56      ┆ 26        │\n",
+       "│ 2021-01-06 ┆ 1      ┆ 20            ┆ 22     ┆ 60             ┆ 66      ┆ 3         │\n",
+       "│ 2021-01-30 ┆ 1      ┆ 2             ┆ 7      ┆ 52             ┆ 61      ┆ 4         │\n",
+       "│ 2021-02-06 ┆ 1      ┆ 16            ┆ 48     ┆ 49             ┆ 65      ┆ 8         │\n",
+       "│ 2021-02-17 ┆ 1      ┆ 15            ┆ 21     ┆ 32             ┆ 46      ┆ 1         │\n",
+       "│ …          ┆ …      ┆ …             ┆ …      ┆ …              ┆ …       ┆ …         │\n",
+       "│ 2015-10-17 ┆ 48     ┆ 49            ┆ 57     ┆ 62             ┆ 69      ┆ 19        │\n",
+       "│ 2020-01-01 ┆ 49     ┆ 53            ┆ 57     ┆ 59             ┆ 62      ┆ 26        │\n",
+       "│ 2017-07-19 ┆ 50     ┆ 51            ┆ 59     ┆ 61             ┆ 63      ┆ 4         │\n",
+       "│ 2020-11-21 ┆ 51     ┆ 54            ┆ 57     ┆ 60             ┆ 69      ┆ 11        │\n",
+       "│ 2023-02-08 ┆ 52     ┆ 58            ┆ 59     ┆ 64             ┆ 66      ┆ 9         │\n",
+       "└────────────┴────────┴───────────────┴────────┴────────────────┴─────────┴───────────┘"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,33 +59,56 @@
     "    )\n",
     "    .select(\n",
     "        pl.col('DATE'),\n",
-    "        YEAR = pl.col('DATE').dt.year().cast(pl.UInt16),\n",
-    "        MONTH = pl.col('DATE').dt.strftime('%b'),\n",
-    "        DAY = pl.col('DATE').dt.strftime('%d').cast(pl.UInt8),\n",
-    "        DAY_NAME = pl.col('DATE').dt.strftime('%a'),\n",
-    "        NUM_1 = pl.col('SPLIT_NUMS')\n",
+    "        # YEAR = pl.col('DATE').dt.year().cast(pl.UInt16),\n",
+    "        # MONTH = pl.col('DATE').dt.strftime('%b'),\n",
+    "        # DAY = pl.col('DATE').dt.strftime('%d').cast(pl.UInt8),\n",
+    "        # DAY_NAME = pl.col('DATE').dt.strftime('%a'),\n",
+    "        LOWEST = pl.col('SPLIT_NUMS')\n",
     "            .list.get(0, null_on_oob=True)\n",
     "            .str.strip_chars().cast(pl.UInt8),\n",
-    "        NUM_2 = pl.col('SPLIT_NUMS')\n",
+    "        SECOND_LOWEST = pl.col('SPLIT_NUMS')\n",
     "            .list.get(1, null_on_oob=True)\n",
     "            .str.strip_chars().cast(pl.UInt8),\n",
-    "        NUM_3 = pl.col('SPLIT_NUMS')\n",
+    "        MEDIAN = pl.col('SPLIT_NUMS')\n",
     "            .list.get(2, null_on_oob=True)\n",
     "            .str.strip_chars().cast(pl.UInt8),\n",
-    "        NUM_4 = pl.col('SPLIT_NUMS')\n",
+    "        SECOND_HIGHEST = pl.col('SPLIT_NUMS')\n",
     "            .list.get(3, null_on_oob=True)\n",
     "            .str.strip_chars().cast(pl.UInt8),\n",
-    "        NUM_5 = pl.col('SPLIT_NUMS')\n",
+    "        HIGHEST = pl.col('SPLIT_NUMS')\n",
     "            .list.get(4, null_on_oob=True)\n",
     "            .str.strip_chars().cast(pl.UInt8),\n",
-    "        NUM_6 = pl.col('SPLIT_NUMS')\n",
+    "        POWERBALL = pl.col('SPLIT_NUMS')\n",
     "            .list.get(5, null_on_oob=True)\n",
     "            .str.strip_chars().cast(pl.UInt8),\n",
     "    )\n",
+    "    .sort('DATE', descending=True)\n",
+    "    .sort('LOWEST', descending=False)\n",
     "    .collect()\n",
     ")\n",
-    "df.head()\n",
-    "\n"
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e6dcc662",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LOWEST', 'SECOND_LOWEST', 'MEDIAN', 'SECOND_HIGHEST', 'HIGHEST', 'ALL']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pick_list = ['LOWEST', 'SECOND_LOWEST', 'MEDIAN', 'SECOND_HIGHEST', 'HIGHEST']\n",
+    "pick_list + ['ALL']"
    ]
   },
   {
